--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAPERHOUSE V12</title>
+    <title>PAPERHOUSE V13</title>
+    <!-- Monetag SDKs -->
     <script src='//libtl.com/sdk.js' data-zone='10337853' data-sdk='show_10337853'></script>
     <script src='//libtl.com/sdk.js' data-zone='10337795' data-sdk='show_10337795'></script>
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
@@ -16,27 +17,26 @@
         .active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        /* Components */
         .glass-card { background: var(--glass); border: 1px solid var(--border); border-radius: 12px; padding: 15px; margin-bottom: 10px; }
-        .header { text-align: center; border-bottom: 1px solid var(--neon); padding: 10px; sticky: top; background: #000; z-index: 100; }
+        .header { text-align: center; border-bottom: 1px solid var(--neon); padding: 10px; position: sticky; top: 0; background: #000; z-index: 100; }
         .user-tag { font-family: 'Orbitron'; color: var(--neon); font-size: 0.9rem; }
         .bal-tag { font-size: 1.8rem; color: #2ecc71; font-weight: 700; }
 
-        /* Menu Grid */
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px; }
         .btn { padding: 14px; border: none; border-radius: 10px; font-weight: 700; color: #fff; font-size: 10px; text-transform: uppercase; cursor: pointer; transition: 0.1s; display: flex; align-items: center; justify-content: center; text-align: center; }
         .btn:active { transform: scale(0.98); opacity: 0.8; }
         .full { grid-column: span 2; }
         
-        /* Table styles */
         table { width: 100%; border-collapse: collapse; font-size: 10px; margin-top: 5px; }
         th, td { padding: 8px; text-align: left; border-bottom: 1px solid #222; }
         .status-Pending { color: #f1c40f; }
         .status-Approved { color: #2ecc71; font-weight: bold; }
 
-        /* Owner Login Overlay */        .overlay { position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); z-index:1000; display:flex; align-items:center; justify-content:center; }
-        .hidden { display: none !important; }
+        .overlay { position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); z-index:1000; display:flex; align-items:center; justify-content:center; }        .hidden { display: none !important; }
         input { width: 100%; padding: 12px; margin: 10px 0; background: #111; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; }
+
+        .pagination-ctrl { display: flex; justify-content: space-between; margin-top: 10px; }
+        .pagination-btn { background: #333; border: none; color: white; padding: 8px 15px; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -79,22 +79,21 @@
         <h3 style="color:var(--neon)">Withdrawal Management</h3>
         <div class="glass-card" style="padding:0; overflow-x:auto;">
             <table>
-                <thead><tr><th>User</th><th>Amt</th><th>Status</th><th>Action</th></tr></thead>
+                <thead><tr><th>User</th><th>GCash Info</th><th>Amt</th><th>Status</th><th>Action</th></tr></thead>
                 <tbody id="owner-list"></tbody>
             </table>
         </div>
-        <div style="display:flex; justify-content:space-between; margin-top:10px;">
-            <button class="btn" style="background:#222" onclick="changeOwnerPage(-1)">PREV</button>
-            <span id="owner-page-num" style="padding:10px;">1</span>
-            <button class="btn" style="background:#222" onclick="changeOwnerPage(1)">NEXT</button>
+        <div class="pagination-ctrl">
+            <button class="pagination-btn" onclick="changeOwnerPage(-1)">PREV</button>
+            <span id="owner-page-num">1</span>
+            <button class="pagination-btn" onclick="changeOwnerPage(1)">NEXT</button>
         </div>
     </div>
 
     <!-- WITHDRAWAL -->
     <div id="page-withdraw" class="page">
         <button class="btn" style="background:#333; margin-bottom:10px" onclick="navTo('page-main')">⬅ Back</button>
-        <div class="glass-card">
-            <input type="text" id="wd-acc" placeholder="GCash / FaucetPay Info">
+        <div class="glass-card"><input type="text" id="wd-acc" placeholder="GCash / FaucetPay Info">
             <button class="btn full" style="background:#2ecc71" onclick="submitWithdraw()">Submit Withdrawal</button>
         </div>
         <h4>History</h4>
@@ -167,7 +166,9 @@
         <button class="btn" style="background:#333; margin-bottom:10px" onclick="navTo('page-main')">⬅ Back</button>
         <div class="glass-card">
             <p>Your Referral Code: <b id="my-code" style="color:var(--neon)">...</b></p>
-            <p>Referral Bonus: ₱<span id="ref-bal">0.000</span></p><button class="btn full" style="background:#2ecc71" onclick="claimRef()">Claim Bonus</button>
+            <p>Referral Bonus: ₱<span id="ref-bal">0.000</span></p>
+            <button class\ 
+="btn full" style="background:#2ecc71" onclick="claimRef()">Claim Bonus</button>
         </div>
         <div class="glass-card">
             <input type="text" id="bind-code" placeholder="Enter Friend's Code">
